[tool.poetry]
name = "debal_scrap"
version = "0.1.0"
description = ""
authors = ["Tewfik Sadaoui <tewfik@numberly.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.0"
lxml = "^4.6.1"
beautifulsoup4 = "^4.9.3"
iterfzf = "^0.5.0"
pandas = "^1.1.4"
matplotlib = "^3.3.3"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
ipython = "^7.19.0"
ipdb = "^0.13.4"
jedi = "^0.17.2"
python-language-server = {extras = ["all"], version = "^0.36.1"}

[tool.poetry.scripts]
scrap = "debal_scrap.app:app"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
